crates/safix/src/snapshots/safix__reporter__tests__graphical-secret_unreadable.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::secret_unreadable

  × could not read the value
  ╰─▶ unexpected end of file
