crates/safix/src/snapshots/safix__reporter__tests__graphical-selection_cancelled.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::selection_cancelled

  × nothing was chosen, so nothing was read.
  │ 
  │ The terminal is back in the state it was found in, no value was written
  │ anywhere, and whatever was decrypted for the preview was dropped rather
  │ than
  │ kept. Leaving is not a failure of the run, but it is not a success either,
  │ so
  │ the exit status is non-zero: a script that wrapped this would otherwise
  │ read a
  │ cancelled choice as a value it never got.
