crates/safix/src/snapshots/safix__reporter__tests__graphical-sops_create_failed.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::sops_create_failed

  × sops could not create secrets/safix/users/alice/secrets.yaml:
  │ Failed to get the data key: no key could be obtained
