crates/safix/src/snapshots/safix__reporter__tests__graphical-sops_key_index.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::sops_key_index

  × could not build the extraction index for 'ops_tooling': invalid unicode
  │ code point
