crates/safix/src/snapshots/safix__reporter__tests__graphical-sops_pipe_missing.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::sops_pipe_missing

  × sops produced no readable output
