crates/safix/src/snapshots/safix__reporter__tests__graphical-sops_unavailable.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::sops_unavailable

  × could not run sops
  ╰─▶ entity not found
