crates/safix/src/snapshots/safix__reporter__tests__graphical-source_has_no_value.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::source_has_no_value

  × the mapping 'ntfy-token' exports ntfy-token for alice, which holds no
  │ value yet.
  │ 
  │ secrets/safix/users/alice/secrets.yaml does not carry the key. Evaluation
  │ could not have caught this: an
  │ entry declares where a value lives, not that one is there, and the two
  │ are the same declaration until something reads the file.
  │ 
  │ Put a value there first:
  │ 
  │     safix set alice ntfy-token
  │ 
  │ or, if a generator should mint it, declare one and run:
  │ 
  │     safix generate alice ntfy-token
