crates/safix/src/snapshots/safix__reporter__tests__graphical-source_unreadable.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::source_unreadable

  × the mapping 'ntfy-token' exports ntfy-token for alice, and secrets/safix/
  │ users/alice/secrets.yaml did not
  │ decrypt. sops has said why, above this.
  │ 
  │ The mapping is refused rather than transferred. A value that cannot be
  │ read cannot be verified, and pushing an unverifiable value into another
  │ store is worse than not pushing it.
